# umami-cli

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.test.yml
scripts/: e2e.sh
src/: config.rs  lib.rs  main.rs  output.rs
src/api/: client.rs  mod.rs
src/commands/: admin.rs  auth.rs  events.rs  links.rs  mod.rs  pixels.rs  realtime.rs  reports.rs  sessions.rs  shares.rs  stats.rs  teams.rs  users.rs  websites.rs
tests/: e2e.rs  unit_cli.rs  unit_client.rs  unit_config.rs  unit_output.rs
tests/helpers/: mod.rs
