[package]
name = "umami-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing self-hosted Umami analytics instances"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
dirs = "6"
toml = "0.8"
colored = "3"
dialoguer = "0.11"
indicatif = "0.17"
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
